# Intelligent-Research-Assistant

./: .dockerignore  Readme.md  app.py  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  search_cache.db  test_classifier.py  test_summarize.py  test_workflow.py
.github/workflows/: deploy.yml
backend/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  app.py  requirements.txt
skills/critic/: SKILL.md
skills/json_robustness/: SKILL.md
skills/orchestrator/: SKILL.md
skills/synthesizer/: SKILL.md
src/: config.py  llm-client.py  llm_client.py
src/agents/: research_agent.py  state.py
src/agents/nodes/: critic.py  orchestrator.py  reader.py  scout.py  synthesizer.py
src/tools/: factcheck.py  hybrid.py  search.py  summarize.py
src/utils/: json_utils.py  web_content.py
tests/: regression_reports.md  regression_test.py  test-llm.py  test_factcheck.py  test_hybrid.py  test_orchestrator.py  test_reader.py  test_scout.py  test_search.py  test_state.py  test_synthesizer.py
